runinsturctions
git clone https://github.com/k-mrm/xv6-aarch64.git

cd xv6-aarch64
	
"make clean" (added )

make

make qemu

user/sh.c: In function 'runcmd':
user/sh.c:58:1: error: infinite recursion detected [-Werror=infinite-recursion]
   58 | runcmd(struct cmd *cmd)
      | ^~~~~~
user/sh.c:89:5: note: recursive call
   89 |     runcmd(rcmd->cmd);
      |     ^~~~~~~~~~~~~~~~~
user/sh.c:109:7: note: recursive call
  109 |       runcmd(pcmd->left);
      |       ^~~~~~~~~~~~~~~~~~
user/sh.c:116:7: note: recursive call
  116 |       runcmd(pcmd->right);
      |       ^~~~~~~~~~~~~~~~~~~
user/sh.c:95:7: note: recursive call
   95 |       runcmd(lcmd->left);
      |       ^~~~~~~~~~~~~~~~~~
user/sh.c:97:5: note: recursive call
   97 |     runcmd(lcmd->right);
      |     ^~~~~~~~~~~~~~~~~~~
user/sh.c:127:7: note: recursive call
  127 |       runcmd(bcmd->cmd);
      |       ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make: *** [<builtin>: user/sh.o] Error 1

in the Makefile
#commented out below, then replace to ignore runcmd error in compiling
#CFLAGS += -MD
CFLAGS += -MD -Wno-infinite-recursion

-------------------------------------------------------------------------------------------
cd raspi3-tutorial/03_uart1   #just for example on how to use gdb 

make qemu-gdb

#then open another window go to the same area to and do gdb command to open up the debugger to see the addresses
gdb
GNU gdb (Debian 13.1-3) 13.1
Copyright (C) 2023 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.
Type "show copying" and "show warranty" for details.
This GDB was configured as "aarch64-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<https://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
    <http://www.gnu.org/software/gdb/documentation/>.

For help, type "help".
Type "apropos word" to search for commands related to "word".
warning: File "/home/johnspaugh/Documents/CSC290/xv6-aarch64/.gdbinit" auto-loading has been declined by your ` `auto-load safe-path' ' set to "$debugdir:$datadir/auto-load".
To enable execution of this file add
        add-auto-load-safe-path /home/johnspaugh/Documents/CSC290/xv6-aarch64/.gdbinit
line to your configuration file "/home/johnspaugh/.config/gdb/gdbinit".
To completely disable this security protection add
        set auto-load safe-path /
line to your configuration file "/home/johnspaugh/.config/gdb/gdbinit".
For more information about this security protection see the
"Auto-loading safe path" section in the GDB manual.  E.g., run from the shell:
        info "(gdb)Auto-loading safe path"
(gdb)exit

#since I did not have gdb/gdbinit in "/home/johnspaugh/.config/gdb/gdbinit" I had to create them. folder and file
#and since I am familar to vim vs vi, I need to download vim
sudo apt install vim
make run

make qemu-gdb

#then open another window go to the same area to and do gdb command to open up the debugger to see the addresses
gdb


